fix line spacing on captions

--- a/src/styles/Comparison.scss
+++ b/src/styles/Comparison.scss
@@ -56,7 +56,7 @@
         color: $grey;
         font-family: $font-serif;
         font-size: 12px;
-        line-height: 19px;
+        line-height: 17px;
         margin: 1px 0;
 
         .note {
